# solfunmeme-dioxus

./: .gitignore  .gitmodules  .rust-analyzer  ANIMATION_FIXES.md  BROKEN_PLUGINS.md  CLI_TOOL_DOCUMENTATION.md  CODEBASE_INDEX.md  CODE_MATH_MANIFOLD_MANIFESTO.md  CONTINUATION_RECONSTRUCTED.md  CRATES_OVERVIEW.md  Caddyfile  Cargo.toml  DEVELOPMENT_NOTES.md  DIGITAL_SECRETOME_SUMMARY.md  Dioxus.toml  Dockerfile  GEMINI.md  GEMINI_INTEGRATION_SUMMARY.md  HANDOFF_SUMMARY.md  MEMO_20250717.md  MISSION_LOG.md  Makefile  ONBOARDING.md  ONTOLOGY_IMPROVEMENTS.md  ONTOLOGY_SUMMARY.md  PROJECT_REVIEW.md  QUICK_REFERENCE.md  README.md  REFACTORING_SUMMARY.md  SOLFUNMEME.md  WORKFLOW_DIAGRAM.md  cursors-out.md  flake.nix  godel_distance_standalone.rs  llm_config.toml  package-lock.json  package.json  rdf_signal.rs  recursive_index.json  recursive_indexing_summary.md  (+10 more)
.cargo/: config.toml
assets/: memes.css  (+1 more)
crates/chat_indexer/: Cargo.toml
crates/chat_indexer/src/: lib.rs
crates/component_builder_lib/: Cargo.toml  README.md
crates/component_builder_lib/src/: builder.rs  components.rs  lib.rs  renderer.rs
crates/doc_cross_references/: Cargo.toml  README.md
crates/doc_cross_references/src/: analysis.rs  cross_reference_analyzer.rs  cross_references.rs  documentation_index.rs  duplicate_finder.rs  examples.rs  index.rs  lib.rs  main.rs  orient.rs  report_generator.rs  reports.rs  types.rs  vibe_finder.rs
crates/emoji_lang_plugin/: Cargo.toml  GEMINI.md  README.md
crates/emoji_lang_plugin/src/: lib.rs
crates/emoji_matrix_lib/: Cargo.toml  README.md
crates/emoji_matrix_lib/src/: lib.rs
crates/emoji_workflow_macro/: Cargo.toml  GEMINI.md  README.md
crates/emoji_workflow_macro/src/: lib.rs  test_macro.rs
crates/index_exporter_lib/: Cargo.toml
crates/index_exporter_lib/src/: exporter.rs  formats.rs  lib.rs  mod.rs  types.rs
crates/index_exporter_lib/src/exporter_modules/: document_converter.rs  mod.rs  value_extractors.rs
crates/model_lib/: Cargo.toml  README.md
crates/model_lib/src/: lib.rs
crates/prepare_sources/: Cargo.toml  GEMINI.md  LICENSE  README.md  deploy.sh  notes.org  project_ontology.ttl
crates/prepare_sources/src/: cli.rs  clifford.rs  code_processing.rs  embedding.rs  embedding_utils.rs  function_analyzer.rs  lib.rs  load_emoji_multivectors.rs  main.rs  process_file.rs  project_analyzer.rs  solana_bootstrap.rs  solana_data_model.rs
crates/prepare_sources/src/embedding_utils/: embedding_context.rs  mod.rs
crates/prepare_sources/src/ontology_processing/: crate_processor.rs  emoji_processor.rs  loader.rs  mod.rs  serializer.rs
crates/prepare_sources/src/project_analyzer/: markdown_analyzer.rs  mod.rs  rust_analyzer.rs  token_analyzer.rs
crates/rdf_output/: Cargo.toml  GEMINI.md  README.md
crates/rdf_output/src/: lib.rs
crates/rdf_processing_lib/: Cargo.toml  README.md
crates/rdf_processing_lib/src/: embedding.rs  lib.rs  load_emoji_multivectors.rs  sieve.rs
crates/rust_sentence_transformers_plugin/: Cargo.toml  README.md
crates/rust_sentence_transformers_plugin/src/: lib.rs
crates/semweb_lib/: Cargo.toml  GEMINI.md
crates/semweb_lib/src/: aspects.rs  cwm.rs  danbri.rs  dawkins.rs  eco.rs  hofstadter.rs  inference.rs  lib.rs  mcluhan.rs  ontology.rs  reasoning.rs  stallman.rs  timbl.rs  torvalds.rs  turtle.rs
crates/signals_lib/: Cargo.toml
crates/signals_lib/src/: accounts.rs  clusters.rs  common.rs  components.rs  connections.rs  emoji.rs  example_usage.rs  lib.rs  loading.rs  menu.rs  module_interface.rs  notifications.rs  rdf_signal.rs  wallet.rs
crates/solana_integration_lib/: Cargo.toml  README.md
crates/solana_integration_lib/src/: lib.rs  solana_bootstrap.rs
crates/solfunmeme_app/: Cargo.toml  GEMINI.md  README.md
crates/solfunmeme_app/src/: app.rs  header.rs  main.rs
crates/solfunmeme_crypto_utils/: Cargo.toml
crates/solfunmeme_crypto_utils/src/: lib.rs
crates/solfunmeme_dioxus_deps/: Cargo.toml
crates/solfunmeme_dioxus_deps/src/: prelude.rs
crates/solfunmeme_embedding/: Cargo.toml
crates/solfunmeme_embedding/src/: candle_embedding.rs  lib.rs
crates/solfunmeme_extractor_system/: Cargo.toml  GEMINI.md  README.md
crates/solfunmeme_extractor_system/src/: clipboard.rs  lib.rs  process_file.rs  test_code.rs
crates/solfunmeme_frontend_core/: Cargo.toml
crates/solfunmeme_function_analysis/: Cargo.toml  GEMINI.md  README.md
crates/solfunmeme_function_analysis/src/: analyze_rust_file.rs  analyzed_document.rs  analyzed_token.rs  annotated_word.rs  code_snippet.rs  conversation_turn.rs  create_code_snippet.rs  document_summary.rs  extract_code_snippets.rs  extract_semantic_summary.rs  extracted_file.rs  find_rust_files.rs  function_info.rs  language_config.rs  lib.rs  multivector.rs  processing_error.rs  processing_file.rs  processing_stats.rs  test_result.rs  uploaded_file.rs
crates/solfunmeme_indexer/: Cargo.toml  GEMINI.md  README.md
crates/solfunmeme_indexer/src/: lib.rs  main.rs
crates/solfunmeme_lean4/: Cargo.toml  GEMINI.md
crates/solfunmeme_lean4/src/: lib.rs  ontology_resolver.rs
crates/solfunmeme_ml_deps/: Cargo.toml
crates/solfunmeme_models/: Cargo.toml  GEMINI.md  README.md
crates/solfunmeme_models/examples/: tarot_example.rs
crates/solfunmeme_models/src/: account.rs  clifford_ops_models.rs  lib.rs  llm_config_models.rs  llm_task_definitions.rs  meme_definitions.rs  parsed.rs  parseinfo.rs  serializable_multivector.rs  tokenamount.rs  tokendata.rs
crates/solfunmeme_ontology_vibe/: Cargo.toml
crates/solfunmeme_ontology_vibe/src/: crate_data_processor.rs  emoji_data_processor.rs  lib.rs  loader.rs  serializer.rs  sophia_wrapper.rs  util.rs
crates/solfunmeme_playground/: Cargo.toml  GEMINI.md  README.md
crates/solfunmeme_playground/src/: lib.rs
prepare_sources/: Cargo.toml  GEMINI.md  LICENSE
prepare_sources/src/: clifford.rs  embedding.rs  function_analyzer.rs  lib.rs  load_emoji_multivectors.rs  main.rs  process_file.rs  project_analyzer.rs  sieve.rs  tests.rs
prepare_sources/src/ontology_generator/: mod.rs  namespaces.rs  process_function.rs  serialize.rs
(+860 files in other folders)
