[package]
name = "solfunmeme-dioxus"
version = "1.1.0"
authors = ["James Michael Dupont <h4@solfunmeme.com>"]
edition = "2021"
license = "AGPL-3.0"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solfunmeme_messages = { path = "crates/solfunmeme_messages" }

solfunmeme_rdf_utils = { path = "crates/solfunmeme_rdf_utils" }

### git deps, could be submodules
wallet-adapter = { git = "https://github.com/meta-introspector/SolanaWalletAdapter-zos", branch ="no-template"} #
solfunmeme_serde_utils = { path = "crates/solfunmeme_serde_utils" }
solfunmeme_web_utils = { path = "crates/solfunmeme_web_utils" }
solfunmeme_logging = { path = "crates/solfunmeme_logging" }
solfunmeme_crypto_utils = { path = "crates/solfunmeme_crypto_utils" }
solfunmeme_utility_deps = { path = "crates/solfunmeme_utility_deps" }

#dioxus-charts = { git = "https://github.com/dioxus-community/dioxus-charts.git" ,  branch = "main" }
dioxus-charts = { path = "vendor/dioxus-charts" }

#dioxus-motion = { git = "https://github.com/wheregmis/dioxus-motion" , branch = "main" }

ndarray = "0.15.6"
tclifford = { path = "vendor/tclifford", features = ["serde"] }
#rust-bert = "0.23.0"
linfa = "0.7.1"
linfa-preprocessing = "0.7.1"
linfa-reduction = "0.7.1"
linfa-clustering = "0.7.1"

rust-embed = { version = "8.7.2", features = ["debug-embed"] , path = "vendor/rust-embed"}
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["std"] }

rrust_kontekst = {path = "crates/rrust_kontekst"}
orbital_sim_lib = {path = "crates/orbital_sim_lib"}
core_data_lib = {path = "crates/core_data_lib"}
emoji_matrix_lib = {path = "crates/emoji_matrix_lib"}
rrust_kontekst_base = {path = "crates/rrust_kontekst_base"}
solfunmeme_extractor = {path = "crates/solfunmeme_extractor"}
solfunmeme_wallet_integration = {path = "crates/solfunmeme_wallet_integration"}
shared_analysis_types = {path = "crates/shared_analysis_types"}
gitaccount = { path = "crates/gitaccount" }
component_builder_lib = {path = "crates/component_builder_lib"}
component_registry_lib = {path = "crates/component_registry_lib"}
component_emoji_lib = {path = "crates/component_emoji_lib"}
playground_lib = {path = "crates/playground_lib"}
views_lib = {path = "crates/views_lib"}
model_lib = {path = "crates/model_lib"}
shared_types_lib = {path = "crates/shared_types_lib"}
signals_lib = {path = "crates/signals_lib"}
prepare_sources = { path = "crates/prepare_sources" }
solana_integration_lib = { path = "crates/solana_integration_lib" }
rdf_processing_lib = { path = "crates/rdf_processing_lib" }
# New refactored crates
solfunmeme_extractor_system = { path = "crates/solfunmeme_extractor_system" }
solfunmeme_models = { path = "crates/solfunmeme_models" }
solfunmeme_views = { path = "crates/solfunmeme_views" }
solfunmeme_playground = { path = "crates/solfunmeme_playground" }
solfunmeme_state = { path = "crates/solfunmeme_state" }
solfunmeme_indexer = { path = "crates/solfunmeme_indexer" }
# solfunmeme_embedding = { path = "crates/solfunmeme_embedding", optional = true } # Made optional
tantivy = { path = "vendor/tantivy" }
bootstrap = { path = "bootstrap" }
chat_indexer = { path = "crates/chat_indexer" }
vibe_prover = { path = "crates/vibe_prover" }
index_exporter_lib = { path = "crates/index_exporter_lib" }
zos_cli_modules = { path = "crates/zos_cli_modules" }


#rand_core = { version = "*", features = ["std"] }
# burn-backend = ["dep:burn"]


# Exclude vendor from certain cargo operations
[workspace]
exclude = ["vendor"]
members = [
    "bootstrap",
    "bootstrap/stage1",
    "crates/bootstrap/stage0",
    "crates/bootstrap/stage1",
    "crates/solfunmeme_app",
    "crates/solfunmeme_wallet_integration",
    "crates/solfunmeme_core_logic",
    "crates/solfunmeme_generated",
    "crates/solfunmeme_tools",
    "crates/task_manager",
    "crates/model_lib",
    "crates/playground_lib",
    "crates/shared_types_lib",
    "crates/views_lib",
    "crates/signals_lib",
    "crates/prepare_sources",
    "crates/solana_integration_lib",
    "crates/rdf_processing_lib",
    "crates/rrust_kontekst",
    "crates/rrust_kontekst_base",
    "crates/shared_analysis_types",
    "crates/gitaccount",
    "crates/solfunmeme_clifford",
    "crates/solfunmeme_solana_data",
    "crates/solfunmeme_function_analysis",
    "crates/solfunmeme_search_tantivy",
    "crates/rdf_output",
    "crates/git_plugin",
    "crates/zip_plugin",
    "crates/s3_plugin",
    "crates/workflow_manager",
    "crates/emoji_lang_plugin",
    "crates/jsonld_plugin",
    "crates/emoji_workflow_macro",
    # "crates/rust_sbert_plugin",
    "crates/llms_from_scratch_rs_plugin",
    "crates/gline_rs_plugin",
    # "crates/extractous_plugin",
    # New refactored crates
    "crates/solfunmeme_extractor_system",
    "crates/solfunmeme_models",
    "crates/solfunmeme_views",
    "crates/solfunmeme_playground",
    "crates/solfunmeme_state",
    "crates/solfunmeme_indexer",
    "crates/chat_indexer",
    "crates/vibe_prover",
    "crates/index_exporter_lib",
    "crates/zos_cli_modules",
    "crates/solfunmeme_serde_utils",
    "crates/solfunmeme_web_utils",
    "crates/solfunmeme_logging",
    "crates/solfunmeme_crypto_utils",
    "crates/solfunmeme_utility_deps",
    "crates/solfunmeme_rdf_utils",

    # "crates/model2vec_rs_plugin",
    "crates/layered_nlp_plugin",
    "crates/vibrato_plugin",
    "crates/keyword_extraction_rs_plugin",
    # "crates/rust_sentence_transformers_plugin",
    "crates/eliza_rs_plugin",
    "crates/bm25_plugin",
    "crates/vaporetto_plugin",
    "crates/tongrams_rs_plugin",
    "crates/solana_airdrop_service_plugin",
    "crates/json_ld_plugin",
    "crates/rhai_plugin",
    "crates/steel_plugin",
    "crates/solfunmeme_tantivy_report",
    "crates/doc_cross_references",
    "crates/gemini_cli_lib",
    "crates/solfunmeme_market_maker",
    "crates/llm_echo_provider",
    "crates/clifford_flow_provider",
    "crates/solfunmeme_code_evolution",
    "crates/solfunmeme_solana_deps",
    "crates/solfunmeme_dioxus_deps",
    "crates/solfunmeme_ml_deps",
    "crates/solfunmeme_tarot",
    "zos/plugins", "phase_demo", "crates/solfunmeme_messages"]

[workspace.package]


# Server-side dependencies (excluded from WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
#rust-bert = "0.23" # Only include rust-bert for non-WASM targets
#bzip2 = "*"
axum = "0.7" # Example server framework
tokio = { version = "1.0", features = ["full"] } # For async runtime

[patch.crates-io]
tclifford = { path = "vendor/tclifford" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"



[features]