[package]
name = "prepare_sources"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"

[dependencies]
anyhow = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
sophia = "0.8"
sophia_api = "0.8"
sophia_turtle = "0.8"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
tclifford = { path = "../vendor/tclifford" }

fastembed = { path = "../vendor/fastembed-rs" }
candle-core = { path = "../vendor/candle/candle-core" }
candle-nn = { path = "../vendor/candle/candle-nn" }
candle-transformers = { path = "../vendor/candle/candle-transformers" }
hf-hub = "0.4"

serde_json = "1.0"
walkdir = "2.3"