[package]
name = "chat_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
indicatif = "0.17"
solfunmeme_search_tantivy = { path = "../solfunmeme_search_tantivy" }
solfunmeme_function_analysis = { path = "../solfunmeme_function_analysis" }
regex = "1.10.5"
