[package]
name = "component_builder_lib"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
dioxus = { version = "0.6.3", features = ["router"] }
component_registry_lib = { path = "../component_registry_lib" }
component_emoji_lib = { path = "../component_emoji_lib" }
core_data_lib = { path = "../core_data_lib" }
signals_lib = { path = "../signals_lib" }
