[package]
name = "doc_cross_references"
version = "0.1.0"
edition = "2021"
description = "Documentation cross-reference system for Solfunmeme-Dioxus"
authors = ["Solfunmeme Team"]
license = "MIT"

[dependencies]
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tclifford = "0.1"
rand = "0.8"
walkdir = "2.3"
toml = "0.8"
markdown = "0.3" 
syn = { version = "2.0", features = ["full", "visit"] }
proc-macro2 = "1.0"
quote = "1.0" 
solfunmeme_search_tantivy = { path = "../solfunmeme_search_tantivy" }
solfunmeme_function_analysis = { path = "../solfunmeme_function_analysis" } 