[package]
name = "emoji_lang_plugin"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"

[dependencies]
urlencoding = "2.1.3"
emojis = "0.7.0"
anyhow = "1.0"
workflow_manager = { path = "../workflow_manager" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
