[package]
name = "index_exporter_lib"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = { path = "../../vendor/tantivy" }
clap = { version = "4", features = ["derive"] }
walkdir = "2.3"
