[package]
name = "model_lib"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
dioxus = { version = "0.6.3", features = ["router"] }
serde = { version = "1.0", features = ["derive"] }
core_data_lib = { path = "../core_data_lib" }
solfunmeme_core_logic = { path = "../solfunmeme_core_logic" }
solfunmeme_models = { path = "../solfunmeme_models" }
