[package]
name = "prepare_sources"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"

[[bin]]
name = "prepare_sources"
path = "src/bin/prepare_sources.rs"

[dependencies]
solfunmeme_search_tantivy = { path = "../solfunmeme_search_tantivy" }
solfunmeme_embedding = { path = "../solfunmeme_embedding" }
solfunmeme_function_analysis = { path = "../solfunmeme_function_analysis" }
solfunmeme_clifford = { path = "../solfunmeme_clifford" }
solfunmeme_solana_data = { path = "../solfunmeme_solana_data" }
solfunmeme_input_fs = { path = "../solfunmeme_input_fs" }

anyhow = "1.0"
indicatif = "0.17"
sha2 = "0.10"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
walkdir = "2.3"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7"
candle-core = { version = "0.9.1", default-features = false }
tokenizers = "0.15"
tclifford = "0.1"
orbital_sim_lib = { path = "../orbital_sim_lib" }
nalgebra = "0.32"

[features]
# No gpu_backend feature if candle is removed