[package]
name = "prepare_sources"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"

[[bin]]
name = "prepare_sources"
path = "src/main.rs"

[dependencies]
solfunmeme_search_tantivy = { path = "../solfunmeme_search_tantivy" }

solfunmeme_function_analysis = { path = "../solfunmeme_function_analysis" }
solfunmeme_clifford = { path = "../solfunmeme_clifford" }
solfunmeme_solana_data = { path = "../solfunmeme_solana_data" }
solfunmeme_input_fs = { path = "../solfunmeme_input_fs" }
solfunmeme_language_processing = { path = "../solfunmeme_language_processing" }

anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
sha2 = "0.10"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
walkdir = "2.3"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7"
tclifford = "0.1"
orbital_sim_lib = { path = "../orbital_sim_lib" }
nalgebra = "0.32"
sophia_api = { path = "../../vendor/sophia_rs/api" }
sophia_inmem = { path = "../../vendor/sophia_rs/inmem" }
sophia_turtle = { path = "../../vendor/sophia_rs/turtle" }
sophia_iri = { path = "../../vendor/sophia_rs/iri" }

# solfunmeme_embedding = { path = "../solfunmeme_embedding" }
# candle-core = { version = "0.2.2" }
# tokenizers = { version = "0.15.0" }

[features]
default = []
# with-embedding = ["solfunmeme_embedding", "candle-core", "tokenizers"]