[package]
name = "solfunmeme_crypto_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
bip39 = "2.1.0"
bs58 = "0.5.1"
chacha20poly1305 = "0.10.1"
ring = { version = "0.17.14", features = ["wasm32_unknown_unknown_js"] }
ring-compat = "0.8.0"
sha2 = "0.10.9"
curve25519-dalek = "4.1.3"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
uuid = { version = "1.17.0", features = ["v4", "js", "rng-getrandom", "rng-rand"] }
