[package]
name = "solfunmeme_dioxus_deps"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
dioxus = { version = "0.6.3", features = ["router"] }
dioxus-router = "0.6.3"
dioxus-web = "0.6.3"
dioxus-motion = "0.3.1"
dioxus-clipboard = "0.2.0"
dioxus-html = "0.6.3"
dioxus-logger = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3.69"
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.42"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.69", features = ["Window", "Navigator", "Storage", "Event", "InputEvent", "EventTarget", "HtmlInputElement", "KeyboardEvent", "Document", "Element", "HtmlAnchorElement", "Clipboard", "console"] }
easer = "0.3.0"
