[package]
name = "solfunmeme_embedding"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"

[dependencies]
anyhow = "1.0"
rand = "0.8"
serde_json = "1.0"
solfunmeme_clifford = { path = "../solfunmeme_clifford" }
sophia_api = "0.8"
sophia_turtle = "0.8"
sophia_inmem = "0.8"
candle-core = { version = "0.9.1", optional = true, default-features = false, features = [] }
candle-nn = { version = "0.9.1", optional = true, default-features = false, features = [] }
candle-transformers = { version = "0.9.1", optional = true, default-features = false, features = [] }
hf-hub = { version = "0.3", optional = true, default-features = false, features = ["online"] }
tokenizers = { version = "0.15", optional = true }

[features]
default = []
with-candle = ["candle-core", "candle-nn", "candle-transformers", "hf-hub", "tokenizers"]
