[package]
name = "solfunmeme_embedding"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"

[dependencies]
# anyhow = "1.0"
# rand = "0.8"
# serde_json = "1.0"
# solfunmeme_clifford = { path = "../solfunmeme_clifford" }
# sophia_api = "0.8"
# sophia_turtle = "0.8"
# sophia_inmem = "0.8"


[features]
# default = []

