[package]
name = "solfunmeme_embedding"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"

[dependencies]
anyhow = "1.0"
rand = "0.8"
serde_json = "1.0"
solfunmeme_clifford = { path = "../solfunmeme_clifford" }
sophia_api = { path = "../../vendor/sophia_rs/api" }
sophia_turtle = { path = "../../vendor/sophia_rs/turtle" }
sophia_inmem = { path = "../../vendor/sophia_rs/inmem" }
# candle-core = { version = "0.5.1" }
# tokenizers = { version = "0.15.2" }


[features]
default = []

