[package]
name = "solfunmeme_extractor_system"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
log = "0.4.21"
anyhow = "1.0"
dioxus = { version = "0.6.3", features = ["router"] }
dioxus-clipboard = "0.2.0"
dioxus-logger = "0.6.2"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["Window", "Navigator", "Clipboard", "console"] }
md5 = "0.7.0" 