[package]
name = "solfunmeme_function_analysis"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"

[dependencies]
anyhow = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
md5 = "0.7"
walkdir = "2.5"
shared_analysis_types = { path = "../shared_analysis_types" }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
solfunmeme_clifford = { path = "../solfunmeme_clifford" }
