[package]
name = "solfunmeme_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10.1"

solfunmeme_input_fs = { path = "../solfunmeme_input_fs" }
solfunmeme_search_tantivy = { path = "../solfunmeme_search_tantivy" }
solfunmeme_tantivy_report = { path = "../solfunmeme_tantivy_report" }
solfunmeme_function_analysis = { path = "../solfunmeme_function_analysis" }


[dev-dependencies]
