[package]
name = "solfunmeme_models"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
log = "0.4.21"
anyhow = "1.0"
solana-sdk = { version = "2.3.0" }
bs58 = "0.5.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "js", "rng-getrandom", "rng-rand"] } 