[package]
name = "solfunmeme_ontology_vibe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
sophia_api = { path = "../../vendor/sophia_rs/api" }
sophia_inmem = { path = "../../vendor/sophia_rs/inmem" }
sophia_turtle = { path = "../../vendor/sophia_rs/turtle" }
sophia_iri = { path = "../../vendor/sophia_rs/iri" }
solfunmeme_clifford = { path = "../solfunmeme_clifford" }
sophia_api_prelude = { path = "../../vendor/sophia_rs/api/prelude" }
